--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,29 +8,29 @@
 
     <fragment
         android:id="@+id/launchFragment"
-        android:name="com.example.android.politicalpreparedness.launch.LaunchFragment"
+        android:name="com.udacity.political.preparedness.launch.LaunchFragment"
         android:label="fragment_launch"
         tools:layout="@layout/fragment_launch"/>
 
     <fragment
         android:id="@+id/representativeFragment"
-        android:name="com.example.android.politicalpreparedness.representative.DetailFragment"
+        android:name="com.udacity.political.preparedness.representative.DetailFragment"
         android:label="fragment_representative"
-        tools:layout="@layout/fragment_representative"></fragment>
+        tools:layout="@layout/fragment_representative" />
     <fragment
         android:id="@+id/voterInfoFragment"
-        android:name="com.example.android.politicalpreparedness.election.VoterInfoFragment"
+        android:name="com.udacity.political.preparedness.election.VoterInfoFragment"
         android:label="fragment_voter_info">
         <argument
             android:name="arg_election_id"
             app:argType="integer" />
         <argument
             android:name="arg_division"
-            app:argType="com.example.android.politicalpreparedness.network.models.Division" />
+            app:argType="com.udacity.political.preparedness.network.models.Division" />
     </fragment>
     <fragment
         android:id="@+id/electionsFragment"
-        android:name="com.example.android.politicalpreparedness.election.ElectionsFragment"
+        android:name="com.udacity.political.preparedness.election.ElectionsFragment"
         android:label="fragment_elections"/>
 
 </navigation>
