--- a/app/src/main/res/layout/fragment_voter_info.xml
+++ b/app/src/main/res/layout/fragment_voter_info.xml
@@ -3,80 +3,140 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Add data binding node for Voter Info ViewModel -->
+    <data>
+
+        <import type="com.udacity.political.preparedness.util.DateFormatter" />
+
+        <variable
+            name="viewModel"
+            type="com.udacity.political.preparedness.election.VoterInfoViewModel" />
+
+        <variable
+            name="election"
+            type="com.udacity.political.preparedness.network.models.Election" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.udacity.political.preparedness.MainActivity">
+        tools:context="com.udacity.political.preparedness.election.VoterInfoFragment">
 
-        <!-- TODO: Add title to toolbar -->
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/election_name"
+        <LinearLayout
+            android:id="@+id/date_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorTitle"
             android:padding="@dimen/default_padding"
-            android:singleLine="true"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <!-- TODO: Add visual styling -->
-        <TextView
-            android:id="@+id/election_date"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/election_date"
+                style="@style/TextAppearance.Header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@{DateFormatter.formatDate(election.electionDay)}"
+                tools:text="@string/date_placeholder" />
+        </LinearLayout>
+
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/election_group"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_padding"
-            app:layout_constraintTop_toBottomOf="@id/election_name"
-            tools:text="12 November 2055" />
+            app:constraint_referenced_ids="state_header,state_locations,state_ballot"
+            app:isVisible="@{viewModel.hasElectionInfo}" />
 
-        <!-- TODO: Add visual styling and content -->
         <TextView
             android:id="@+id/state_header"
-            android:layout_width="wrap_content"
+            style="@style/TextAppearance.Header"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/election_date"
-            app:layout_constraintStart_toStartOf="@id/election_date" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/election_information"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/date_layout" />
 
-        <!-- TODO: Add click binding to open web URL -->
-        <!-- TODO: Add visual styling and content -->
         <TextView
             android:id="@+id/state_locations"
+            style="@style/TextAppearance.Link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/state_header"
-            app:layout_constraintStart_toStartOf="@id/election_date" />
+            android:layout_marginTop="10dp"
+            android:onClick="@{() -> viewModel.onVotingLocationClicked()}"
+            android:text="@string/voting_information"
+            app:layout_constraintStart_toStartOf="@id/state_header"
+            app:layout_constraintTop_toBottomOf="@id/state_header" />
 
-        <!-- TODO: Add click binding to open web URL -->
-        <!-- TODO: Add visual styling and content -->
         <TextView
             android:id="@+id/state_ballot"
+            style="@style/TextAppearance.Link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/state_locations"
-            app:layout_constraintStart_toStartOf="@id/election_date" />
+            android:layout_marginTop="8dp"
+            android:onClick="@{() -> viewModel.onBallotInformationClicked()}"
+            android:text="@string/ballot_information"
+            app:layout_constraintStart_toStartOf="@id/state_header"
+            app:layout_constraintTop_toBottomOf="@id/state_locations" />
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/address_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="state_correspondence_header,address" />
+            app:constraint_referenced_ids="state_correspondence_header,address"
+            app:isVisible="@{viewModel.hasMailingAddress}" />
 
-        <!-- TODO: Add visual styling and content -->
         <TextView
             android:id="@+id/state_correspondence_header"
+            style="@style/TextAppearance.Header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/state_ballot"
-            app:layout_constraintStart_toStartOf="@id/election_date" />
+            android:layout_marginTop="24dp"
+            android:text="@string/mailing_address"
+            app:layout_constraintStart_toStartOf="@id/state_header"
+            app:layout_constraintTop_toBottomOf="@id/state_ballot" />
 
-        <!-- TODO: Add data binding -->
         <TextView
             android:id="@+id/address"
+            style="@style/TextAppearance.Description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@{viewModel.mailingAddress}"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@id/state_header"
             app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
-            app:layout_constraintStart_toStartOf="@id/election_date" />
+            tools:text="@string/address" />
 
-        <!-- TODO: Add button to save election to Room -->
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/follow_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/button_margin_horizontal"
+            android:layout_marginBottom="16dp"
+            android:onClick="@{() -> viewModel.onElectionFollowingChanged()}"
+            android:text="@{viewModel.buttonText}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="@string/follow_election" />
+
+        <ProgressBar
+            android:id="@+id/status_loading_wheel"
+            android:layout_width="@dimen/progress_bar_size"
+            android:layout_height="@dimen/progress_bar_size"
+            android:indeterminate="true"
+            android:indeterminateDrawable="@drawable/loading_animation"
+            android:visibility="gone"
+            app:apiStatus="@{viewModel.voterInfoApiStatus}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
