--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#34495e</color>
-    <color name="colorPrimaryDark">#1d3747</color>
-    <color name="colorAccent">#82d9c8</color>
+    <color name="colorPrimary">#34495E</color>
+    <color name="colorPrimaryDark">#1D3747</color>
+    <color name="colorAccent">#82D9C8</color>
+    <color name="colorPrimaryLight">#45607A</color>
     <color name="white">#FFFFFF</color>
     <color name="gray50">#7F7F7F</color>
+    <color name="colorCard">#C2F6EC</color>
+    <color name="colorTitle">#D0D5D9</color>
 </resources>
