--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_padding">8dp</dimen>
-
-    <!-- TODO: Add necessary dimension values -->s
-
+    <dimen name="card_margin">4dp</dimen>
+    <dimen name="card_elevation">4dp</dimen>
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="card_padding_horizontal">12dp</dimen>
+    <dimen name="card_padding_vertical">8dp</dimen>
+    <dimen name="button_margin_horizontal">24dp</dimen>
+    <dimen name="progress_bar_size">300dp</dimen>
 </resources>
