--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,13 +2,56 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="fontFamily">@font/space_mono</item>
+        <item name="colorControlNormal">@color/white</item>
     </style>
 
     <!-- TODO: Add necessary styles -->
+    <style name="AppBarLayoutTheme" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
+
+    <style name="TitleStyle" parent="TextAppearance.AppCompat.Title">
+        <item name="android:fontFamily">@font/space_mono_bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Button" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.Header" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="fontFamily">@font/space_mono_bold</item>
+        <item name="android:textAlignment">gravity</item>
+        <item name="android:textDirection">locale</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="TextAppearance.Title" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="fontFamily">@font/space_mono_bold</item>
+        <item name="android:textAlignment">gravity</item>
+        <item name="android:textDirection">locale</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="TextAppearance.Description" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textColor">@color/gray50</item>
+        <item name="fontFamily">@font/space_mono</item>
+        <item name="android:textAlignment">gravity</item>
+        <item name="android:textDirection">locale</item>
+        <item name="android:textSize">10sp</item>
+    </style>
+
+    <style name="TextAppearance.Link" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textColor">@color/colorPrimaryLight</item>
+        <item name="android:textAlignment">gravity</item>
+        <item name="android:textDirection">locale</item>
+        <item name="android:textSize">14sp</item>
+        <item name="drawableStartCompat">@drawable/ic_external_link</item>
+        <item name="android:drawablePadding">@dimen/card_padding_horizontal</item>
+    </style>
 
 </resources>
