--- a/app/src/main/res/layout/fragment_launch.xml
+++ b/app/src/main/res/layout/fragment_launch.xml
@@ -11,7 +11,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="@dimen/logo_top_margin"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ballot_logo"
             app:layout_constraintEnd_toEndOf="parent"
@@ -22,8 +22,8 @@
             android:id="@+id/upcoming_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/button_margin_horizontal"
-            android:layout_marginBottom="12dp"
+            android:layout_marginHorizontal="@dimen/spacing_medium"
+            android:layout_marginBottom="@dimen/spacing_small"
             android:text="@string/upcoming_elections"
             app:layout_constraintBottom_toTopOf="@+id/representative_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +33,8 @@
             android:id="@+id/representative_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/button_margin_horizontal"
-            android:layout_marginBottom="16dp"
+            android:layout_marginHorizontal="@dimen/spacing_medium"
+            android:layout_marginBottom="@dimen/spacing_regular"
             android:text="@string/find_my_representative"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
