--- a/app/src/main/res/layout/fragment_representative.xml
+++ b/app/src/main/res/layout/fragment_representative.xml
@@ -1,119 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:motion="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Add data binding node -->
+    <data>
 
-    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
+        <variable
+            name="viewModel"
+            type="com.udacity.political.preparedness.representative.RepresentativeViewModel" />
+    </data>
+
     <androidx.constraintlayout.motion.widget.MotionLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        app:layoutDescription="@xml/fragment_representative_scene">
 
-        <!-- TODO: Add visual styling and content -->
-        <TextView
-            android:id="@+id/search_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- TODO: Add data binding value -->
-        <!-- TODO: Add visual styling and content -->
-        <EditText
-            android:id="@+id/address_line_1"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/search_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:inputType="textPostalAddress"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_title" />
-
-        <!-- TODO: Add data binding value -->
-        <!-- TODO: Add visual styling and content -->
-        <EditText
-            android:id="@+id/address_line_2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:autofillHints=""
-            android:inputType="textPostalAddress"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/address_line_1" />
-
-        <!-- TODO: Add data binding value -->
-        <!-- TODO: Add visual styling and content -->
-        <EditText
-            android:id="@+id/city"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:inputType="textPostalAddress"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/state"
-            app:layout_constraintTop_toBottomOf="@id/address_line_2" />
-
-        <!-- TODO: Add default values from provided resources  -->
-        <!-- TODO: Add data binding value -->
-        <!-- TODO: Add visual styling and content -->
-        <Spinner
-            android:id="@+id/state"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:autofillHints=""
-            android:inputType="textPostalAddress"
-            app:layout_constraintStart_toEndOf="@id/city"
+            android:layout_margin="@dimen/spacing_regular"
+            android:background="@color/colorCard"
+            android:clipToPadding="true"
+            app:cardCornerRadius="@dimen/large_card_corner_radius"
+            app:cardElevation="@dimen/large_card_elevation"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/city"
-            app:layout_constraintBottom_toBottomOf="@id/city"/>
-
-        <!-- TODO: Add data binding value -->
-        <!-- TODO: Add visual styling and content -->
-        <EditText
-            android:id="@+id/zip"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:inputType="number"
-            android:maxLength="5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/city"
-            app:layout_constraintTop_toBottomOf="@id/city" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <!-- TODO: Add visual styling and label -->
-        <Button
-            android:id="@+id/button_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/zip" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorCard"
+                android:paddingHorizontal="@dimen/card_padding_horizontal"
+                android:paddingVertical="@dimen/card_padding_vertical">
 
-        <!-- TODO: Add visual styling and content -->
-        <Button
-            android:id="@+id/button_location"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/button_search" />
+                <TextView
+                    android:id="@+id/search_title"
+                    style="@style/TextAppearance.Header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/representative_search"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- TODO: Add visual styling and content -->
+                <EditText
+                    android:id="@+id/address_line_1"
+                    style="@style/TextAppearance.EditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="postalAddress"
+                    android:hint="@string/address_line_1"
+                    android:inputType="textPostalAddress"
+                    android:minHeight="@dimen/edit_text_min_height"
+                    android:text="@={viewModel.address.line1}"
+                    android:textColorHint="@color/hintColor"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/search_title"
+                    tools:ignore="LabelFor" />
+
+                <EditText
+                    android:id="@+id/address_line_2"
+                    style="@style/TextAppearance.EditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:autofillHints="postalAddress"
+                    android:hint="@string/address_line_2"
+                    android:inputType="textPostalAddress"
+                    android:minHeight="@dimen/edit_text_min_height"
+                    android:text="@={viewModel.address.line2}"
+                    android:textColorHint="@color/hintColor"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/address_line_1"
+                    tools:ignore="LabelFor" />
+
+                <EditText
+                    android:id="@+id/city"
+                    style="@style/TextAppearance.EditText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="postalAddress"
+                    android:hint="@string/city"
+                    android:inputType="textPostalAddress"
+                    android:minHeight="@dimen/edit_text_min_height"
+                    android:text="@={viewModel.address.city}"
+                    android:textColorHint="@color/hintColor"
+                    app:layout_constraintEnd_toStartOf="@id/state"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/address_line_2"
+                    tools:ignore="LabelFor" />
+
+                <Spinner
+                    android:id="@+id/state"
+                    style="@style/TextAppearance.Spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:autofillHints="postalAddress"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:contentDescription="@string/state"
+                    android:entries="@array/states"
+                    android:inputType="textPostalAddress"
+                    android:popupBackground="@color/colorCard"
+                    android:selectedItemPosition="@={viewModel.selectedStatePosition}"
+                    app:layout_constraintBottom_toBottomOf="@id/city"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/city"
+                    app:layout_constraintTop_toTopOf="@id/city" />
+
+                <EditText
+                    android:id="@+id/zip"
+                    style="@style/TextAppearance.EditText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="postalCode"
+                    android:hint="@string/zip_code"
+                    android:inputType="number"
+                    android:maxLength="5"
+                    android:minHeight="@dimen/edit_text_min_height"
+                    android:text="@={viewModel.address.zip}"
+                    android:textColorHint="@color/hintColor"
+                    app:layout_constraintEnd_toEndOf="@id/city"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/city"
+                    tools:ignore="LabelFor" />
+
+                <Button
+                    android:id="@+id/find_representatives_button"
+                    style="@style/Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/spacing_regular"
+                    android:layout_marginBottom="@dimen/spacing_small"
+                    android:text="@string/find_my_representative"
+                    app:layout_constraintTop_toBottomOf="@id/zip" />
+
+                <Button
+                    android:id="@+id/use_location_button"
+                    style="@style/Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/spacing_regular"
+                    android:layout_marginBottom="@dimen/spacing_small"
+                    android:text="@string/use_my_location"
+                    app:layout_constraintTop_toBottomOf="@id/find_representatives_button" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+
         <TextView
             android:id="@+id/representative_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_location" />
+            app:layout_constraintTop_toBottomOf="@id/search_card" />
 
-        <!-- TODO: Add Representatives RecyclerView -->
-
-        <!-- TODO: Add visual styling and content -->
         <TextView
-            android:id="@+id/list_placeholder"
+            android:id="@+id/list_header"
+            style="@style/TextAppearance.Header"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacing_regular"
             android:gravity="center"
+            android:text="@string/my_representatives"
             android:textAlignment="center"
             android:visibility="gone"
-            motion:visibilityMode="ignore"
-            app:layout_constraintTop_toBottomOf="@id/representative_title"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/search_card"
+            app:visibleIf="@{viewModel.hasRepresentativeData}"
+            tools:visibility="visible" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/representatives_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/spacing_small"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/list_header"
+            tools:itemCount="4"
+            tools:listitem="@layout/list_item_representative" />
+
+
+        <ProgressBar
+            android:id="@+id/status_loading_wheel"
+            android:layout_width="@dimen/progress_bar_size"
+            android:layout_height="@dimen/progress_bar_size"
+            android:indeterminate="true"
+            android:indeterminateDrawable="@drawable/loading_animation"
+            android:visibility="gone"
+            app:apiStatus="@{viewModel.representativesApiStatus}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_card"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
