--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,23 @@
     <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="card_padding_horizontal">12dp</dimen>
     <dimen name="card_padding_vertical">8dp</dimen>
-    <dimen name="button_margin_horizontal">24dp</dimen>
+    <dimen name="large_card_corner_radius">12dp</dimen>
+    <dimen name="large_card_elevation">8dp</dimen>
+    <dimen name="spacing_large">32dp</dimen>
+    <dimen name="spacing_medium">24dp</dimen>
+    <dimen name="spacing_regular">16dp</dimen>
+    <dimen name="spacing_small">12dp</dimen>
+    <dimen name="spacing_very_small">8dp</dimen>
+    <dimen name="spacing_minimum">4dp</dimen>
+    <dimen name="logo_top_margin">64dp</dimen>
     <dimen name="progress_bar_size">300dp</dimen>
+    <dimen name="link_size">30dp</dimen>
+    <dimen name="profile_picture_size">60dp</dimen>
+    <dimen name="edit_text_min_height">48dp</dimen>
+    <dimen name="text_size_header">20sp</dimen>
+    <dimen name="text_size_title">12sp</dimen>
+    <dimen name="text_size_title2">14sp</dimen>
+    <dimen name="text_size_desc">10sp</dimen>
+    <dimen name="text_size_desc2">12sp</dimen>
+    <dimen name="text_size_extra">14sp</dimen>
 </resources>
