--- a/app/src/main/res/layout/fragment_voter_info.xml
+++ b/app/src/main/res/layout/fragment_voter_info.xml
@@ -21,24 +21,18 @@
         android:layout_height="match_parent"
         tools:context="com.udacity.political.preparedness.election.VoterInfoFragment">
 
-        <LinearLayout
-            android:id="@+id/date_layout"
+        <TextView
+            android:id="@+id/election_date"
+            style="@style/TextAppearance.Header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorTitle"
+            android:gravity="center"
             android:padding="@dimen/default_padding"
+            android:text="@{DateFormatter.formatDate(election.electionDay)}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/election_date"
-                style="@style/TextAppearance.Header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@{DateFormatter.formatDate(election.electionDay)}"
-                tools:text="@string/date_placeholder" />
-        </LinearLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/date_placeholder" />
 
 
         <androidx.constraintlayout.widget.Group
@@ -57,7 +51,7 @@
             android:layout_marginTop="@dimen/spacing_medium"
             android:text="@string/election_information"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/date_layout" />
+            app:layout_constraintTop_toBottomOf="@id/election_date" />
 
         <TextView
             android:id="@+id/state_locations"
